--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,11 +6,11 @@ on:
   workflow_dispatch:
 
 concurrency:
-  group: pages-${{ github.ref }}
+  group: pages-deploy
   cancel-in-progress: true
 
 jobs:
-  build-deploy:
+  deploy:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -19,84 +19,95 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
 
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install Python deps
+      - name: Install Python requirements
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Build blog with publish.py (BASE_URL=/blog/)
+      # Nếu blog của bạn cần base path /blog/ thì giữ BASE_URL=/blog/
+      # Nếu không cần, có thể xóa env: BASE_URL.
+      - name: Build blog with publish.py
         env:
           BASE_URL: /blog/
         run: |
           set -euxo pipefail
-          python publish.py
-          echo "==== AFTER publish.py ===="
-          find . -maxdepth 2 -type d -print
-          echo "=== list site/ (nếu có) ==="
-          if [ -d site ]; then find site -maxdepth 3 -type f | sed 's/^/  /'; else echo "  (no site/)"; fi
-          echo "=== list _public (nếu có) ==="
-          if [ -d _public ]; then find _public -maxdepth 3 -type f | sed 's/^/  /'; else echo "  (no _public yet)"; fi
+          if [ -f publish.py ]; then
+            python publish.py
+          else
+            echo "::warning ::publish.py not found, skip build step"
+          fi
 
+      # GH Actions mạnh tay xoá _public ở bước này nên đoạn script dưới
+      # phát hiện xem publish.py đã thả files vào _public/blog chưa.
+      # Nếu blog đã ở _public/blog thì KHÔNG xoá _public.
+      # Nếu blog ở site/ thì xoá _public rồi copy site/* -> _public/blog/.
       - name: Assemble final output to _public
         run: |
           set -euxo pipefail
-          rm -rf _public
-          mkdir -p _public/blog
 
-          # Trường hợp publish.py xuất ra ./site
-          if [ -d site ] && [ -n "$(find site -type f | head -1)" ]; then
-            rsync -a site/ _public/blog/
-            echo "Copied blog from ./site -> _public/blog"
-          # Trường hợp publish.py tự ghi thẳng vào _public/blog
-          elif [ -d _public/blog ] && [ -n "$(find _public/blog -type f | head -1)" ]; then
-            echo "Blog already exists in _public/blog"
-          else
+          # Tìm nguồn blog đã build
+          BLOG_SRC=""
+          if [ -d site ] && find site -type f | head -1 >/dev/null 2>&1; then
+            BLOG_SRC="site"
+          elif [ -d _public/blog ] && find _public/blog -type f | head -1 >/dev/null 2>&1; then
+            BLOG_SRC="_public/blog"
+          fi
+
+          if [ -z "${BLOG_SRC}" ]; then
             echo "::error ::Blog build not found (no files in ./site or in _public/blog)"
             exit 1
           fi
 
-          # Coming Soon
+          if [ "${BLOG_SRC}" = "site" ]; then
+            # Blog ở site/ -> làm sạch và copy về _public/blog
+            rm -rf _public || true
+            mkdir -p _public/blog
+            cp -r site/* _public/blog/
+          else
+            # Blog đã ở _public/blog -> KHÔNG xoá _public
+            mkdir -p _public
+          fi
+
+          # Coming Soon -> /coming-soon (accept coming-soon/ hoặc coming_soon/)
           if [ -d coming-soon ]; then
             mkdir -p _public/coming-soon
-            rsync -a coming-soon/ _public/coming-soon/
+            cp -r coming-soon/* _public/coming-soon/
           elif [ -d coming_soon ]; then
             mkdir -p _public/coming-soon
-            rsync -a coming_soon/ _public/coming-soon/
+            cp -r coming_soon/* _public/coming-soon/
           fi
 
-          # Contact (nếu có)
+          # Contact -> /contact (nếu có)
           if [ -d contact ]; then
             mkdir -p _public/contact
-            rsync -a contact/ _public/contact/
+            cp -r contact/* _public/contact/
           fi
 
-          # Root redirect -> /coming-soon/
-          cat > _public/index.html <<'HTML'
-          <!doctype html><meta http-equiv="refresh" content="0;url=/coming-soon/">
-          HTML
+          # Root index: redirect về /coming-soon/ (đổi thành /blog/ nếu muốn)
+          echo '<meta http-equiv="refresh" content="0;url=/coming-soon/">' > _public/index.html
 
-          echo "=== FINAL _public ==="
-          find _public -maxdepth 4 -type f | sort
-
+      # (Tuỳ chọn) upload _public để debug khi build fail
       - name: Upload _public artifact (debug)
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: public-debug
+          name: _public
           path: _public
-          if-no-files-found: error
 
-      - name: Deploy to Cloudflare Pages
+      - name: Publish to Cloudflare Pages
         uses: cloudflare/pages-action@v1
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
           projectName: cachemissed
           directory: _public
-          wranglerVersion: '3'
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+          wranglerVersion: '3'
