refactor: enhance blog build process in deploy workflow for better output handling

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,38 +26,62 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Build blog with publish.py (base rỗng)
-        run: |
-          # KHÔNG set BASE_URL=/blog/ nữa
-          python publish.py
-
-      - name: Assemble _public
+      # KHÔNG set BASE_URL=/blog/ để link không lộ /blog
+      - name: Build blog with publish.py
         run: |
           set -euxo pipefail
-          rm -rf _public && mkdir -p _public
+          # dọn sạch trước khi build
+          rm -rf _public site || true
+          python publish.py
+          echo "==== DEBUG after publish.py ===="
+          ( [ -d _public ] && find _public -maxdepth 2 -type f | sed 's#^_public/##' | sort ) || true
+          ( [ -d site    ] && find site    -maxdepth 2 -type f | sed 's#^site/##'    | sort ) || true
 
-          # Blog đã được publish.py xuất ra _public/blog/*  (nếu publish.py của bạn làm khác,
-          # thì copy vào _public/blog ở đây)
-          if [ ! -d "_public/blog" ]; then
-            # Nếu publish.py xuất ra ./site/blog -> copy vào _public/blog
-            if [ -d "site/blog" ]; then
-              mkdir -p _public/blog
-              cp -r site/blog/* _public/blog/
-            fi
+      - name: Assemble _public (normalize outputs)
+        run: |
+          set -euxo pipefail
+
+          # Nếu blog đã đúng chỗ: _public/blog -> OK
+          if [ -d "_public/blog" ]; then
+            echo "Blog already in _public/blog"
+
+          # Nếu publish.py đổ blog THẲNG vào _public (có index.html ở gốc)
+          elif [ -f "_public/index.html" ]; then
+            echo "Blog seems to be at _public root, moving into _public/blog"
+            mkdir -p _public_blog_tmp
+            shopt -s dotglob
+            for f in _public/*; do
+              base="$(basename "$f")"
+              # đừng đụng vào các thư mục non-blog nếu đã có
+              if [ "$base" != "coming-soon" ] && [ "$base" != "contact" ]; then
+                mv "$f" _public_blog_tmp/
+              fi
+            done
+            mkdir -p _public/blog
+            mv _public_blog_tmp/* _public/blog/
+            rmdir _public_blog_tmp
+
+          # Nếu blog nằm ở site/blog (một số publish.py cũ)
+          elif [ -d "site/blog" ]; then
+            echo "Copying blog from site/blog to _public/blog"
+            mkdir -p _public/blog
+            cp -r site/blog/* _public/blog/
+
+          else
+            echo "ERROR: Blog build not found" >&2
+            exit 1
           fi
 
-          # Coming soon -> _public/coming-soon
-          if [ -d coming-soon ]; then
+          # Copy Coming Soon vào _public/coming-soon
+          if [ -d "coming-soon" ]; then
             mkdir -p _public/coming-soon
             cp -r coming-soon/* _public/coming-soon/
-          elif [ -d coming_soon ]; then
+          elif [ -d "coming_soon" ]; then
             mkdir -p _public/coming-soon
             cp -r coming_soon/* _public/coming-soon/
           fi
 
-          # KHÔNG tạo _public/index.html nữa. Functions sẽ rewrite root -> /blog hoặc /coming-soon.
-
-      - name: Show tree (debug)
+      - name: TREE _public (debug)
         run: |
           echo "==== TREE _public ===="
           find _public -maxdepth 3 -type f | sed 's#^_public/##' | sort
